--- a/bower.json
+++ b/bower.json
@@ -1,30 +1,22 @@
 {
   "name": "ag-data-grid",
-  "version": "0.0.0",
-  "authors": [
-    ""
-  ],
-  "description": "",
-  "keywords": [
-    "web-component",
-    "web-components",
-    "polymer",
-    "data",
-    "grid"
-  ],
-  "main": "ag-data-grid.html",
+  "version": "0.0.1",
+  "description": "Responsive data grid that can host search, filters and supports sortable columns and custom cell renderer",
   "license": "MIT",
-  "homepage": "https://github.com/PolymerLabs/ag-data-grid/",
+  "main": "ag-data-grid.html",
+  "private": true,
+  "keywords": [
+    "polymer",
+    "web-components",
+    "data-grid",
+    "data-table"
+  ],
   "ignore": [
-    "/.*",
-    "/test/",
-    "/demo/"
+    "bower_components"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#v0.8.0-rc.6"
-  },
-  "devDependencies": {
-    "iron-doc-viewer": "PolymerElements/iron-doc-viewer#^0.8.6",
-    "web-component-tester": "*"
+    "polymer": "Polymer/polymer#0.5.1",
+    "core-elements": "Polymer/core-elements#0.5.1",
+    "paper-elements": "Polymer/paper-elements#0.5.1"
   }
 }
